k8s/app/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-python-service
  namespace: kyc-blockchain
  labels:
    app.kubernetes.io/name: kyc-python
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kyc-python
  ports:
    - name: http
      port: 5001
      targetPort: 5001
      protocol: TCP
    # # prometheus-fastapi-instrumentator exposes /metrics on same port
    # - name: metrics
    #   port: 5001
    #   targetPort: 5001
